Swagger for messages
