# handlers/messages.go
@@ -1,22 +1,26 @@
 package handlers
 
 import (
+	"github.com/hnpatil/gochat/entities"
 	"github.com/hnpatil/gochat/entities/message"
 )
 
 type CreateMessage struct {
 	UserRequest
-	RoomID  string         `path:"roomID" validate:"required"`
-	Status  message.Status `json:"status" default:"DRAFT" validate:"oneof=DRAFT SENT"`
-	Content string         `json:"content"`
+	MessageBody
+	RoomID string `path:"roomID" validate:"required"`
 }
 
 type UpdateMessage struct {
 	UserRequest
-	RoomID    string         `path:"roomID" validate:"required"`
-	MessageID string         `path:"messageID" validate:"required,uuid"`
-	Status    message.Status `json:"status" default:"DRAFT" validate:"oneof=DRAFT SENT"`
-	Content   string         `json:"content"`
+	MessageBody
+	RoomID    string `path:"roomID" validate:"required"`
+	MessageID string `path:"messageID" validate:"required,uuid"`
+}
+
+type MessageBody struct {
+	Status  message.Status `json:"status" default:"DRAFT" validate:"oneof=DRAFT SENT" example:"SENT"` //Message status
+	Content string         `json:"content" example:"Hello"`                                           //Message content
 }
 
 type GetMessage struct {
@@ -35,4 +39,12 @@ type ListMessages struct {
 	UserRequest
 	RoomID         string `path:"roomID" validate:"required"`
 	ModifiedBefore string `query:"modifiedBefore" default:"0001-01-01 00:00:00" validate:"datetime=2006-01-02 15:04:05"`
+}
+
+type MessageResponse struct {
+	Data *entities.Message `json:"data"`
+}
+
+type MessagesResponse struct {
+	Data []*entities.Message `json:"data"`
 }
